Fix url for websocket, add scrollbar for chat and auto scroll to bottom

--- a/client/src/css/Chat.css
+++ b/client/src/css/Chat.css
@@ -1,32 +1,16 @@
-/*.Chat {
-    width: 60%;
-    background-color: #81B298;
-}
-
-.Chat .header {
-    text-align: center;
-}
-
-.Chat .header h3 {
-    color: #F7F7F7;
-    text-transform: uppercase;
-    font-size: 1rem;
-    font-weight: 300;
-    letter-spacing: 3px;
-    margin: 15px 2rem;
-}
-
-.Chat .body {
-    height: 100%;
-    text-align: center;
-    background-color: #F7F7F7;
-}
-
-.Chat .body h3 { 
-    margin: auto;
-}
-*/
 .Chat{
     padding-right: 0px;
     padding-left: 0px;
+}
+.message-container{
+    height: 80vh;
+    overflow-y: scroll;
+}
+
+.single-message{
+    border-color: transparent;
+}
+
+.send-message-container{
+    margin-top: 10px;
 }
